Fixed issues with appsettings secretes

--- a/src/AccessConfiguration/AccessConfiguration.csproj
+++ b/src/AccessConfiguration/AccessConfiguration.csproj
@@ -10,4 +10,12 @@
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Content Include="..\config\appsettings.json">
+            <Link>config\appsettings.json</Link>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+
 </Project>
