--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,15 +5,25 @@ on:
     branches: ["main"]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-      
       - name: Checkout code
         uses: actions/checkout@v4
       
       - name: Build Docker images
         run: docker-compose -f docker-compose.yaml build
       
+  push-to-dockerhub:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
+      - name: Push images to Docker Hub 
+        run: docker-compose -f docker-compose.yaml push
