--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
     
     steps:
@@ -13,17 +13,17 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Build Docker images
-        run: docker-compose -f docker-compose.yaml build
+        uses: docker/compose-action@v3
+        with:
+          command: -f docker-compose.yaml build
       
-  push-to-dockerhub:
-    runs-on: ubuntu-latest
-    
-    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Push images to Docker Hub 
-        run: docker-compose -f docker-compose.yaml push
+      - name: Push Docker compose to Hub 
+        uses: docker/compose-action@v3
+        with:
+          command: -f docker-compose.yaml push
