--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -12,10 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Build Docker images
-        uses: docker/compose-action@v3
-        with:
-          command: -f docker-compose.yaml build
+        run: docker-compose -f docker-compose.yaml build
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -23,7 +24,7 @@ jobs:
           username: ${{ vars.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Push Docker compose to Hub 
+      - name: Push compose to Docker Hub 
         uses: docker/compose-action@v3
         with:
           command: -f docker-compose.yaml push
